# SlowFast

./: .gitignore  AGENTS.md  convert2trt.sh  create_csv_files.py  example_onnx_inference.py  export_onnx_final.py  filter_frames.py  inspect_onnx.py  mmaction2  onnx_inference.py  tensorrt_inference.py  update_csv_labels.py
ava_evaluation/: __init__.py
configs/Custom/: X3D_M_custom.yaml
cpp_inference/: CMakeLists.txt  main.cpp
slowfast/config/: defaults.py
slowfast/datasets/: __init__.py  charades.py  kinetics.py  ptv_datasets.py
slowfast/models/: __init__.py  video_model_builder.py
slowfast/utils/: checkpoint.py  meters.py  misc.py
tools/: report_misclassifications.py  run_net.py  test_net.py  train_net.py
